--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 requests = "==2.25.1"
 python-telegram-bot = "==13.7"
 pytz = "==2021.1"
-psutil = "*"
+psutil = "==5.8.0"
 
 [dev-packages]
 
